# GridBNB-USDT

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_QUALITY.md  DOCKER_INSTALLATION_GUIDE.md  Dockerfile  LICENSE  NGINX_DEPLOYMENT.md  OPTIMIZATION_REPORT.md  README.md  RESTRUCTURE_SUMMARY.md  ROADMAP.md  SECURITY_HARDENING.md  api_key_manager.py  api_key_validator.py  config.py  coverage.json  deploy-security-update.sh  docker-compose.yml  exchange_client.py  helpers.py  main.py  monitor.py  order_tracker.py  position_controller_s1.py  pytest.ini  requirements-dev.txt  requirements.txt  risk_manager.py  run_tests.py  start-fullstack-dev.bat  start-with-nginx.bat  start-with-nginx.sh  start.bat  start.sh  start_backend.py  test_alerts.py  test_config_reload.py  (+5 more)
.claude/: index.json  settings.local.json
.github/ISSUE_TEMPLATE/: roadmap-task.md
.spec-workflow/: session.json
config/: .env.example  .env.example.old  pyproject.toml  pytest.ini
docker/: Dockerfile  docker-compose.yml
docker/grafana/dashboards/: gridbnb_trading_dashboard.json
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docker/prometheus/rules/: trading_alerts.yml
docs/: AI_STRATEGY_GUIDE.md  CCXT_VS_BINANCE_SDK.md  CLAUDE.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_MIGRATION_GUIDE.md  DOCKER_COMPOSE_STANDARD.md  ENTERPRISE_PATH_FIX.md  FASTAPI_MIGRATION.md  GRID_STRATEGY_API_COMPLETION.md  GRID_STRATEGY_API_INTEGRATION.md  GRID_STRATEGY_FINAL_REPORT.md  GRID_STRATEGY_IMPLEMENTATION_REPORT.md  GRID_STRATEGY_TODO.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  MONITORING_GUIDE.md  MULTI_EXCHANGE_ARCHITECTURE.md  OPTIMIZATION_RECOMMENDATIONS.md  PATH_HANDLING.md  PROGRESS.md  PROJECT_STANDARDS.md  QUICK_START_MULTI_EXCHANGE.md  RISK_CONTROL_ASSESSMENT_20251028.md  SCRIPT_OPTIMIZATION.md  STOP_LOSS_DESIGN.md  TRADING_FEES.md  TREND_DETECTOR_DESIGN.md  WEB_UI_AI_VISUALIZATION_GUIDE.md  WEEK1_FINAL_REPORT.md
docs/architecture/: QUICK_START.md  multi-exchange-design.md
docs/archive/: AI_ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  AI_GRID_SYNERGY_DESIGN.md  AI_STRATEGY_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_PROGRESS.md  README-https.md  README.md  STRATEGY_IMPROVEMENTS.md  STRATEGY_OPTIMIZATION_S1_REMOVAL.md  TESTING_AND_VISUALIZATION_SUMMARY.md  WEEK1_COMPLETION_REPORT.md
docs/examples/: global_allocator_integration.py
examples/: grid_strategy_integration_guide.py  multi_exchange_migration.py  multi_exchange_usage.py
logs/: README.md
scripts/: init_configs.py  init_database.py  run_tests.py  start-with-nginx.sh  update.sh  update_admin_password.py  update_imports.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py  auth.py  middleware.py
src/api/routes/: __init__.py  auth_routes.py  config_routes.py  grid_strategy_routes.py  history_routes.py  sse_routes.py  template_routes.py
src/config/: config_definitions.py  loader.py  settings.py
src/core/: exchange_client.py  trader.py
src/core/exchange/: __init__.py  base.py  binance_adapter.py  factory.py  okx_adapter.py  validator.py
src/core/exchanges/: __init__.py  base.py  binance.py  factory.py  okx.py  utils.py
src/database/: __init__.py  connection.py  models.py
src/database/migrations/: 001_initial_schema.py  __init__.py
src/fastapi_app/: __init__.py  dependencies.py  main.py  schemas.py
src/fastapi_app/routers/: __init__.py  auth.py  config.py  dashboard.py  history.py  logs.py  metrics.py  sse.py  template.py  trades.py
src/monitoring/: __init__.py  metrics.py
src/security/: api_key_manager.py  api_key_validator.py
src/services/: alerting.py  config_watcher.py  fastapi_server.py  web_server.py  web_server_v2.py
src/strategies/: advanced_risk_controller.py  ai_prompt.py  ai_strategy.py  correlation_analyzer.py  derivatives_data.py  global_allocator.py  grid_order_engine.py  grid_strategy_config.py  grid_trigger_engine.py  market_microstructure.py  market_sentiment.py  multi_timeframe.py  multi_timeframe_analyzer.py  position_controller_s1.py  risk_manager.py  technical_indicators.py  trend_detector.py
src/utils/: helpers.py  logging_config.py
tests/: conftest.py  test_api.py  test_api_simple.py  test_config.py  test_database.py  test_exchange_client.py  test_fastapi.py  test_grid_strategy_api.py  test_position_controller_s1.py  test_risk_manager.py  test_trader.py  test_web_auth.py
tests/integration/: test_full_trading_cycle.py  test_multi_symbol.py  test_network_failure.py
tests/unit/: test_ai_strategy.py  test_config.py  test_correlation_analyzer.py  test_derivatives_data.py  test_exchange_adapters.py  test_exchange_client.py  test_exchange_factory.py  test_global_allocator.py  test_grid_strategy_config.py  test_grid_trigger_engine.py  test_market_microstructure.py  test_multi_timeframe_analyzer.py  test_position_controller_s1.py  test_risk_manager.py  test_stop_loss.py  test_trader.py  test_trend_detector.py  test_web_auth.py
web/: .env.development  .env.production  FRONTEND_IMPLEMENTATION_SUMMARY.md  README.md  README_FRONTEND_OPTIMIZATION.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: auth.ts  config.ts  dashboard.ts  logs.ts  trades.ts
web/src/components/: AuthGuard.tsx  (+7 more)
(+30 files in other folders)
